fix popup styling on firefox

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -29,9 +29,11 @@
 
 body {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     font-family: sans-serif;
+    width: 200px;
     background-color: #222;
     color: #fff;
     font-size: 60%;
